# NextZip.macos

./: .gitignore  CMakeLists.txt  README.md
docs/: 00_RECOMMENDATION.md  10_7zip-vs-keka.md  20_format-matrix-and-rar.md  30_architecture-and-ui.md
resources/: Assets.car  nzip.icns
resources/nzip.icon/: icon.json
shell-app/: Info.plist.in  NextZip.entitlements  NextZipAppDelegate.h  NextZipAppDelegate.mm  NextZipMainWindowController.h  NextZipMainWindowController.mm  NextZipMenuBuilder.h  NextZipMenuBuilder.mm  main.mm
src/: NextZipController.h  NextZipController.mm  NextZipDialogs.h  NextZipDialogs.mm  NextZipHost.h  NextZipPlugin.mm  NineZipController.h  NineZipController.mm  NineZipDialogs.h  NineZipDialogs.mm  NineZipPlugin.mm  SevenZipEngine.cpp  SevenZipEngine.h
tests/: test_create.cpp  test_engine.cpp  test_extract.cpp  test_nested.cpp  test_opts.cpp
tools/: build-release.sh  generate-dmg-background.py
